# SimAndViewCharacter

./: .gitignore  LICENSE  bvhview.cmd  env-config.json  readme-old.md  readme.md  setup.py  workspace.code-workspace
ModifyODESrc/: .gitignore  CMakeLists.txt  DrawStuffWorld.pxd  EigenWrapper.pxd  ModifyODE.pxd  ModifyODE.pyx  MotionUtils.pxd  MotionUtils.pyx  clear.cmd  setup.py
ModifyODESrc/Utils/: AxisAngleToEuler.cpp  AxisAngleToEuler.h  ForwardKinematics.cpp  ForwardKinematics.h  JMJ.cpp  JMJ.h  QuaternionWithGrad.cpp  QuaternionWithGrad.h  SpecifiedBoxGroundCD.cpp  SpecifiedBoxGroundCD.h  inversedynamics.cpp  inversedynamics.h  inversedynamicswrapper.cpp  inversedynamicswrapper.h  joint_local_quat_batch.cpp
ModifyODESrc/drawstuff/src/: drawstuff.cpp  drawstuffWrapper.cpp
ModifyODESrc/include/drawstuff/: drawstuffWrapper.h
ModifyODESrc/include/ode/: collision.h  collision_space.h  common.h  objects.h
ModifyODESrc/src/: capsule.cpp  collision_kernel.cpp  collision_space.cpp  cylinder.cpp  ode.cpp
Tests/CIO/: RunSimpleCase.py  TanhView.py  TestAddMotionNoise.py  UnityVis.py
Tests/CharacterData/: .gitignore  WalkF-100-3leg.bvh  WalkF-mocap-100.bvh  WalkF.bvh  lamp.json  modify-foot-2.pickle  modify-foot.pickle  readme.md  resample.py  stdhuman-400-50-foot0.2.pickle  stdhuman-400-kp-50-kd.pickle  stdhuman-ref.pickle  world-single-box.json
Tests/Common/: test-math-helper.py
Tests/ODESim/: SimpleCase.py  TestContactMaxForce.py  TestEndJointPos.py
Tests/Other/: MotionSubSeqSave.py  PytorchGrad.py  TestPyTorchTime.py  vectorize.py
Tests/SMPL/: testSMPL.py
Tests/Samcon/: .gitignore  CharacterRefViewer.py  ContactVisualize.py  OptimVis.py  RunHuman36Batch.py  RunMultiTime.py  TestEvaluation.py  TestJumpLabelData.py  TrainPolicyMain.py  UnityViewOneCharacter.py  main.py  traj-opt-main.py
Tests/TestPyQt/: TestChooseColor.py
Tests/TestWm5/: .gitignore  CMakeLists.txt  main.cpp
Tests/TestWm5/Wm5/: Wm5Assert.cpp  Wm5Matrix4.h  Wm5Matrix4.inl  Wm5Vector4.h  Wm5Vector4.inl
Tests/Utils/: InvDynView.py  LossDrawer.py  MeanQuaternion.py  TestMotionSmooth.py  test-2d-com.py  test-mirror-samcon-result.py
Tests/pymotionlib/: BVHEdit.py  TestLeftRightMirror.py  TestPyTorchMotionData.py  VisBVHInDir.py
Tests/renderer/: play_bvh.py  stable_pd_by_bvh.py
Tests/simple-case/: TPoseTrajOpt.py
UnityRender/: .gitignore  UnityRender.sln  readme.md
UnityRender/Assets/: LeftHandSkin.fbx  RightHandSkin.fbx  packages.config
UnityRender/Assets/Plugins/src/: .gitignore  CMakeLists.txt  Common.h  Eigen.cpp  Eigend.cpp  Main.cpp  Network.cpp  Network.h
UnityRender/ProjectSettings/: ProjectSettings.asset
UnityRender/UserSettings/: EditorUserSettings.asset
UnityRender/document/: CreateCharacter.md
VclSimuBackend/: .gitignore
VclSimuBackend/CMA/: CMAUpdate.py  SimpleGaussian.py  purecmaes.m  readme.md
VclSimuBackend/Common/: .gitignore  DiffQuat.py  Draw.py  GetFileNameByUI.py  Helper.py  MathHelper.py  PyTorchHelper.py  RotateConvertFast.py  SmoothOperator.py  readme.md
VclSimuBackend/Demo/: .gitignore
VclSimuBackend/MujocoSim/: .gitignore  ArgsConfig.py  DeepMimicEnv.py  PPO.py  PPOTrain.py  Samcon.py  SamconMujoco3.py  stdhuman-zyx-local.xml  stdhuman.xml
VclSimuBackend/ODESim/: .gitignore  ArrowInfo.py  BVHToTarget.py  BodyInfo.py  BodyInfoState.py  CharacterJointInfoRoot.py  CharacterListWrapper.py  CharacterWrapper.py  EndJointInfo.py  Environment.py  ExtJointList.py  JointInfo.py  JointInfoInit.py  JointInfoWrapper.py  ODECharacter.py  ODECharacterExporter.py  ODECharacterInit.py  ODEScene.py  ODESceneWrapper.py  PDControler.py  TargetPose.py  UpdateSceneBase.py  Utils.py  readme.md
VclSimuBackend/Render/: Renderer.py
VclSimuBackend/SMPL/: README.md  SMPL.py  config.py  preprocess.py  smpl_np.py  smpl_torch.py  smpl_torch_batch.py  stdhuman2SMPL.py  test.py
VclSimuBackend/Samcon/: .gitignore  EvalHuman36.py  SamHlp.py  SamconAndRL.py  SamconMainWorkerBase.py  SamconMainWorkerRaw.py  SamconTargetPose.py  SamconUpdateScene.py  SamconWorkerBase.py  SamconWorkerFull.py  SamconWorkerNoTorch.py  SimpleSamcon.py  StateTree.py  config.py  readme.md
VclSimuBackend/Server/: readme.md
VclSimuBackend/SimpleCIO/: .gitignore  Optimize2d.py  SimpleTrack.py  TestOptimize2d.py  UnityVisualizer.py
VclSimuBackend/Utils/: .gitignore  (+14 more)
doc/: .gitignore  unity-render-v2-usage.md
meshtest/: drawObj2.py  readme.md
pyphysx/: .gitignore  ReadMe.md
(+400 files in other folders)
